# custom-dmq

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  deny.toml  docker-compose.yml
.github/workflows/: ci.yml  integration.yml  release.yml
config/: cluster.docker.toml  cluster.example.toml
crates/dmq-broker/: Cargo.toml
crates/dmq-broker/src/: broker.rs  client.rs  lib.rs  replication.rs  tls.rs
crates/dmq-cli/: Cargo.toml
crates/dmq-cli/src/: admin.rs  consumer_client.rs  consumer_fetch.rs  lib.rs  metrics_server.rs  producer_direct.rs  runner.rs
crates/dmq-core/: Cargo.toml
crates/dmq-core/src/: acl.rs  cgroup.rs  cluster_state.rs  compression.rs  fetch_batch.rs  lib.rs  limits.rs  metrics.rs  partition.rs  topic.rs
crates/dmq-protocol/: Cargo.toml
crates/dmq-protocol/src/: lib.rs
crates/dmq-storage/: Cargo.toml
crates/dmq-storage/benches/: throughput.rs
crates/dmq-storage/src/: constants.rs  fsync.rs  lib.rs  log_store.rs  mmap_queue.rs  partition_log.rs  storage.rs  topic_config.rs
crates/dmq-stress/: Cargo.toml
crates/dmq-stress/src/: audit.rs  client.rs  config.rs  ledger.rs  lib.rs  main.rs  report.rs  stress.rs
deploy/grafana/: dashboard.json
deploy/helm/custom-dmq/: Chart.yaml  values.yaml
deploy/helm/custom-dmq/templates/: service.yaml  statefulset.yaml
deploy/k8s/: configmap.yaml  service.yaml  statefulset.yaml
docs/: architecture.md  protocol.md  roadmap.md  runbook.md
docs/adr/: 001-broker-centric-api.md  002-append-only-log-storage.md  003-dial-back-retirement.md
src/: acl.rs  admin.rs  auth.rs  broker.rs  cgroup.rs  client.rs  cluster.rs  cluster_state.rs  compression.rs  consumer.rs  consumer_client.rs  consumer_fetch.rs  coordinator.rs  fetch_batch.rs  fsync.rs  idempotency.rs  lib.rs  log_store.rs  main.rs  message.rs  metadata.rs  metrics.rs  metrics_server.rs  mmap_queue.rs  partition.rs  partition_log.rs  producer.rs  producer_direct.rs  protocol.rs  replication.rs  request_log.rs  tls.rs  topic.rs
tests/: admin_integration.rs  cluster_integration.rs  failover_integration.rs  fetch_integration.rs  idempotency_integration.rs  partition_integration.rs  persistence_integration.rs  protocol_integration.rs  push_integration.rs  recovery_integration.rs  stress_integration.rs
