[package]
name = "custom-dmq"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
memmap2 = "0.9"
tempfile = "3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
lz4_flex = "0.11"
rustls = "0.23"
rustls-pemfile = "2"
rustls-pki-types = "1"
tokio-rustls = "0.26"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
