[workspace]
members = [
    "crates/dmq-protocol",
    "crates/dmq-storage",
    "crates/dmq-core",
    "crates/dmq-broker",
    "crates/dmq-cli",
    "crates/dmq-stress",
    ".",
]
resolver = "2"

[workspace.package]
version = "2.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tempfile = "3"
serial_test = "3"

[package]
name = "custom-dmq-integration"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dev-dependencies]
custom_dmq = { package = "dmq-broker", path = "crates/dmq-broker" }
dmq-stress = { path = "crates/dmq-stress" }
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = { workspace = true }
serial_test = { workspace = true }
