[package]
name = "dmq-core"
version = "2.0.0"
edition = "2021"
license.workspace = true

[dependencies]
dmq-protocol = { path = "../dmq-protocol" }
dmq-storage = { path = "../dmq-storage" }
lz4_flex = "0.11"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
