[package]
name = "dmq-storage"
version.workspace = true
edition = "2021"
license.workspace = true

[dependencies]
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
tempfile = "3"

[dev-dependencies]
tempfile = "3"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "throughput"
harness = false
